# MAD_2_Project

./: .gitignore  README.md
backend/: .gitignore  acme.conf  app.py  config.py  dev.sh  pyproject.toml
backend/controllers/: analytics.py  auth.py  chapters.py  departments.py  instructors.py  quiz.py  students.py  subject.py
backend/models/: model.py  schema.py
backend/utils/: celery_init.py  common.py  db.py  init_db.py  jwt_token.py  mail.py  secure.py  validate.py
frontend/: components.d.ts  eslint.config.js  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  apiFetch.js  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: BaseLayout.vue  NavBar.vue  adminLayout.vue  adminSidebar.vue  instructorLayout.vue  studentLayout.vue  test.vue
frontend/src/router/: index.js
frontend/src/stores/: AuthStore.js  RouteStore.js
frontend/src/views/: LoginView.vue  QuizCreateView.vue  QuizEditView.vue  RegisterView.vue
frontend/src/views/admin/: DashboardView.vue  DepartmentsView.vue  QuizView.vue  StudentsQuizView.vue  StudentsView.vue  SubjectDetailView.vue  SubjectsAddView.vue  SubjectsView.vue  VerfiyInstructorsView.vue
frontend/src/views/instructor/: ChaptersView.vue  DashboardView.vue  QuizView.vue
frontend/src/views/student/: DashboardView.vue  QuizFindView.vue  QuizScoreView.vue  QuizView.vue  QuizWindow.vue
