[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.0.7",
    "flask-pydantic>=0.12.0",
    "flask-security[common,fsqla]>=5.5.2",
    "flask-sqlalchemy>=3.1.1",
    "flasksimpleauth[cors,jwt]>=34.1",
    "gevent>=24.11.1",
    "gunicorn>=23.0.0",
    "pip>=24.3.1",
    "pydantic>=2.10.4",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.36",
]
